CHANGES IN FLTK 1.1.0b6

	- Documentation updates...
	- The configure script now works within the CygWin
	  environment.
	- Added new Fl::version() method to get the current
	  FLTK library version (for shared libraries/DLLs)
	- Added new Fl::event() method to get the current
	  event that is being processed.
	- Added new fl_beep() function to do audible
	  notifications of various types.
	- Added new Fl_GIF_Image, Fl_JPEG_Image, Fl_PNG_Image,
	  Fl_PNM_Image, Fl_XBM_Image, and Fl_XPM_Image classes.
	- Added new Fl_Shared_Image class, a la FLTK 2.0.
	- Added new Fl_Tiled_Image class for tiled backgrounds.
	- Added new copy(), desaturate(), inactive(), and
	  color_average() methods to the Fl_Image classes.
	- Added a horizontal scrollbar to the Fl_Help_View
	  widget.
	- Fl_Float_Input and Fl_Int_Input no longer accept
	  pasted text that is not a floating point or integer
	  value.  Pasted numbers now replace text in these
	  widgets.
	- Implemented the Fl_File_Icon::load_png() method.
	- The Fl_File_Icon::load_system_icons() method now
	  supports KDE 2.x icons.
	- Fixed PNG support in Fl_Help_View.
	- Removed the "Microsoft" mode button from the menubar
	  demo.
	- The browser demo now makes sure that the input field
	  contains a number.
	- The Fl_Browser::make_visible() method now range checks
	  the input.
	- Updated the fl_draw() and fl_measure() methods to
	  accept an optional draw_symbols argument, which
	  controls whether symbols are drawn in the text.
	- Added new Fl::visible_focus() methods to control
	  whether the focus box is drawn.
	- The focus box is now drawn using the contrast color.
	- Fl_Repeat_Button didn't accept keyboard focus.
	- Added new Fl::visible_focus() method and standard
	  "-kbd" and "-nokbd" options in Fl::args() processing
	  to control whether keyboard focus is shown and handled
	  by non-text widgets.
	- The wrong tooltip could be shown if the user moved the
	  mouse over adjacent widgets with tooltips.